crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/037.cypher
CALL db.labels(); MATCH (n) RETURN n
